Estilo da parte principal

--- a/src/index.html
+++ b/src/index.html
@@ -59,11 +59,11 @@
 			<div class="content">
 				<div class="itens">
 					<section id="carnes">
-						<h2>Carnes</h2>
+						<h2 id="carnes_title">Carnes</h2>
 						<div>
 							<figure>
 								<img src="imagens/img1.png" class="produto" />
-								<figcaption>Picanha Friboi tradicional peça a vácuo kg</figcaption>
+								<figcaption>Picanha Friboi tradicional peça a vácuo Kg</figcaption>
 								<span>R$ 57,99</span>
 							</figure>
 							<figure>
