--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 				<div id="categorias">
 					<a href="#categorias">Categorias</a>
 				</div>
-				<div id="contato">
+				<div id="menu_contato">
 					<a href="#contato">Contato</a>
 				</div>
 				<div>
@@ -68,43 +68,53 @@
 							</figure>
 							<figure>
 								<img src="imagens/img2.png" class="produto" />
-								<figcaption>Fraldinha Friboi peça kg R$ 36,99</figcaption>
+								<figcaption>Fraldinha Friboi peça kg</figcaption>
+								<span>R$ 36,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img3.png" class="produto" />
-								<figcaption>Contrafilé pedaço kg R$ 41,99</figcaption>
+								<figcaption>Contrafilé pedaço kg</figcaption>
+								<span>R$ 41,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img4.png" class="produto" />
-								<figcaption>Paleta de cordeiro Do Chef congelada peça kg R$ 45,99</figcaption>
+								<figcaption>Paleta de cordeiro Do Chef congelada peça kg</figcaption>
+								<span>R$ 45,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img5.png" class="produto" />
-								<figcaption>Cupim Friboi pedaço R$ 36,99</figcaption>
+								<figcaption>Cupim Friboi pedaço</figcaption>
+								<span>R$ 36,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img6.png" class="produto" />
-								<figcaption>Picanha suína Pamplona temperada resfriada peça kg R$ 26,99</figcaption>
+								<figcaption>Picanha suína Pamplona temperada resfriada peça kg</figcaption>
+								<span>R$ 26,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img7.png" class="produto" />
-								<figcaption>Costela suína Perdigão a granel kg R$ 21,99</figcaption>
+								<figcaption>Costela suína Perdigão a granel kg</figcaption>
+								<span>R$ 21,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img8.png" class="produto" />
-								<figcaption>Bisteca suína Sadia a granel kg R$ 17,99</figcaption>
+								<figcaption>Bisteca suína Sadia a granel kg</figcaption>
+								<span>R$ 17,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img9.png" class="produto" />
-								<figcaption>Coxinha da asa de frango a granel kg R$ 14,99</figcaption>
+								<figcaption>Coxinha da asa de frango a granel kg</figcaption>
+								<span>R$ 14,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img10.png" class="produto" />
-								<figcaption>Linguiça toscana Seara a granel kg R$ 15,29</figcaption>
+								<figcaption>Linguiça toscana Seara a granel kg</figcaption>
+								<span>R$ 15,29</span>
 							</figure>
 							<figure>
 								<img src="imagens/img11.png" class="produto" />
-								<figcaption>Linguiça calabresa defumada Seara a granel kg R$ 18,59</figcaption>
+								<figcaption>Linguiça calabresa defumada Seara a granel kg</figcaption>
+								<span>R$ 18,59</span>
 							</figure>
 						</div>
 					</section>
@@ -116,19 +126,23 @@
 						<div>
 							<figure>
 								<img src="imagens/img38.png" class="produto" />
-								<figcaption>Tilápia inteira fresca kg R$ 17,99</figcaption>
+								<figcaption>Tilápia inteira fresca kg</figcaption>
+								<span>R$ 17,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img39.png" class="produto" />
-								<figcaption>Tambaqui de cativeiro inteiro fresco kg R$ 21,79</figcaption>
+								<figcaption>Tambaqui de cativeiro inteiro fresco kg</figcaption>
+								<span>R$ 21,79</span>
 							</figure>
 							<figure>
 								<img src="imagens/img40.png" class="produto" />
-								<figcaption>Pintado de cativeiro inteiro fresco kg R$ 28,99</figcaption>
+								<figcaption>Pintado de cativeiro inteiro fresco kg</figcaption>
+								<span>R$ 28,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img41.png" class="produto" />
-								<figcaption>Camarão Oceani descascado cozido congelado 400 g R$ 39,99</figcaption>
+								<figcaption>Camarão Oceani descascado cozido congelado 400g</figcaption>
+								<span>R$ 39,99</span>
 							</figure>
 						</div>
 					</section>
@@ -140,47 +154,58 @@
 						<div>
 							<figure>
 								<img src="imagens/img32.png" class="produto" />
-								<figcaption>Abobrinha italiana kg R$ 1,99</figcaption>
+								<figcaption>Abobrinha italiana kg</figcaption>
+								<span>R$ 1,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img33.png" class="produto" />
-								<figcaption>Alho roxo cada 100g R$ 2,89</figcaption>
+								<figcaption>Alho roxo cada 100g </figcaption>
+								<span>R$ 2,89</span>
 							</figure>
 							<figure>
 								<img src="imagens/img34.png" class="produto" />
-								<figcaption>Batata doce rosada kg R$ 1,99</figcaption>
+								<figcaption>Batata doce rosada kg</figcaption>
+								<span>R$ 1,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img35.png" class="produto" />
-								<figcaption>Berinjela kg R$ 3,89</figcaption>
+								<figcaption>Berinjela kg</figcaption>
+								<span>R$ 3,89</span>
 							</figure>
 							<figure>
 								<img src="imagens/img36.png" class="produto" />
-								<figcaption>Cebola kg R$ 4,49</figcaption>
+								<figcaption>Cebola kg</figcaption>
+								<span>R$ 4,49</span>
 							</figure>
 							<figure>
 								<img src="imagens/img37.png" class="produto" />
-								<figcaption>Cenoura kg R$ 2,29</figcaption>
+								<figcaption>Cenoura kg</figcaption>
+								<span>R$ 2,29</span>
 							</figure>
 							<figure>
 								<img src="imagens/img42.png" class="produto" />
-								<figcaption>Mandioquinha kg R$ 6,99</figcaption>
+								<figcaption>Mandioquinha kg</figcaption>
+								<span>R$ 6,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img44.png" class="produto" />
-								<figcaption>Pepino japonês kg R$ 2,99</figcaption>
+								<figcaption>Pepino japonês kg</figcaption>
+								<span>R$ 2,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img45.png" class="produto" />
-								<figcaption>Pimentão verde kg R$ 3,79</figcaption>
+								<figcaption>Pimentão verde kg</figcaption>
+								<span>R$ 3,79</span>
 							</figure>
 							<figure>
 								<img src="imagens/img46.png" class="produto" />
-								<figcaption>Tomate carmem kg R$ 3,99</figcaption>
+								<figcaption>Tomate carmem kg</figcaption>
+								<span>R$ 3,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img47.png" class="produto" />
-								<figcaption>Tomate Grape Mel Trebeschi 180g R$ 2,39</figcaption>
+								<figcaption>Tomate Grape Mel Trebeschi 180g</figcaption>
+								<span>R$ 2,39</span>
 							</figure>
 						</div>
 					</section>
@@ -192,63 +217,78 @@
 						<div>
 							<figure>
 								<img src="imagens/img57.png" class="produto" />
-								<figcaption>Manga tommy kg R$ 3,99</figcaption>
+								<figcaption>Manga tommy kg</figcaption>
+								<span>R$ 3,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img58.png" class="produto" />
-								<figcaption>Maracujá azedo R$ 5,99</figcaption>
+								<figcaption>Maracujá azedo</figcaption>
+								<span>R$ 5,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img59.png" class="produto" />
-								<figcaption>Mexerica ponkan kg R$ 2,89</figcaption>
+								<figcaption>Mexerica ponkan kg</figcaption>
+								<span>R$ 2,89</span>
 							</figure>
 							<figure>
 								<img src="imagens/img60.png" class="produto" />
-								<figcaption>Pera williams kg R$ 7,99</figcaption>
+								<figcaption>Pera williams kg</figcaption>
+								<span>R$ 7,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img61.png" class="produto" />
-								<figcaption>Uva branca baneja 500g R$ 5,99</figcaption>
+								<figcaption>Uva branca baneja 500g</figcaption>
+								<span>R$ 5,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img62.png" class="produto" />
-								<figcaption>Uva preta bandeja 500 g R$ 6,49</figcaption>
+								<figcaption>Uva preta bandeja 500g</figcaption>
+								<span>R$ 6,49</span>
 							</figure>
 							<figure>
 								<img src="imagens/img49.png" class="produto" />
-								<figcaption>Abacate kg R$ 4,59</figcaption>
+								<figcaption>Abacate kg</figcaption>
+								<span>R$ 4,59</span>
 							</figure>
 							<figure>
 								<img src="imagens/img50.png" class="produto" />
-								<figcaption>Caqui fuyu kg R$ 4,99</figcaption>
+								<figcaption>Caqui fuyu kg</figcaption>
+								<span>R$ 4,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img51.png" class="produto" />
-								<figcaption>Goiaba vermelha kg R$ 3,99</figcaption>
+								<figcaption>Goiaba vermelha kg</figcaption>
+								<span>R$ 3,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img52.png" class="produto" />
-								<figcaption>Laranja pera kg R$ 2,79</figcaption>
+								<figcaption>Laranja pera kg</figcaption>
+								<span>R$ 2,79</span>
 							</figure>
 							<figure>
 								<img src="imagens/img53.png" class="produto" />
-								<figcaption>Limão taiti kg R$ 1,99</figcaption>
+								<figcaption>Limão taiti kg</figcaption>
+								<span>R$ 1,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img54.png" class="produto" />
-								<figcaption>Maçã Fuji kg R$ 4,99</figcaption>
+								<figcaption>Maçã Fuji kg</figcaption>
+								<span>R$ 4,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img55.png" class="produto" />
-								<figcaption>Maçã Senninha pacote 1kg R$ 4,49</figcaption>
+								<figcaption>Maçã Senninha pacote 1kg</figcaption>
+								<span>R$ 4,49</span>
 							</figure>
 							<figure>
 								<img src="imagens/img56.png" class="produto" />
-								<figcaption>Mamão papaya unid. 2,99</figcaption>
+								<figcaption>Mamão papaya unid.</figcaption>
+								<span>R$ 2,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img48.png" class="produto" />
-								<figcaption>Abacaxi pérola unid. R$ 5,39</figcaption>
+								<figcaption>Abacaxi pérola unid.</figcaption>
+								<span>R$ 5,39</span>
 							</figure>
 						</div>
 					</section>
@@ -260,7 +300,8 @@
 						<div>
 							<figure>
 								<img src="imagens/img12.png" class="produto" />
-								<figcaption>Margarina Qualy tradicional 500g R$ 4,99</figcaption>
+								<figcaption>Margarina Qualy tradicional 500g</figcaption>
+								<span>R$ 4,99</span>
 							</figure>
 						</div>
 					</section>
@@ -272,7 +313,8 @@
 						<div>
 							<figure>
 								<img src="imagens/img13.png" class="produto" />
-								<figcaption>Arroz branco Blue Ville tipo 1 5 kg R$ 22,98</figcaption>
+								<figcaption>Arroz branco Blue Ville tipo 1 5 kg</figcaption>
+								<span>R$ 22,98</span>
 							</figure>
 						</div>
 					</section>
@@ -284,7 +326,8 @@
 						<div>
 							<figure>
 								<img src="imagens/img14.png" class="produto" />
-								<figcaption>Azeite de oliva Gallo clássico extra virgem vidro 500 ml R$ 4,99</figcaption>
+								<figcaption>Azeite de oliva Gallo clássico extra virgem vidro 500 ml</figcaption>
+								<span>R$ 4,99</span>
 							</figure>
 						</div>
 					</section>
@@ -296,15 +339,18 @@
 						<div>
 							<figure>
 								<img src="imagens/img15.png" class="produto" />
-								<figcaption>Leite condensado Moça semidesnatado TP 395 g R$ 4,69</figcaption>
+								<figcaption>Leite condensado Moça semidesnatado TP 395g</figcaption>
+								<span>R$ 4,69</span>
 							</figure>
 							<figure>
 								<img src="imagens/img16.png" class="produto" />
-								<figcaption>Chocolate em tablete Lacta sabores 90 g R$ 4,19</figcaption>
+								<figcaption>Chocolate em tablete Lacta sabores 90g</figcaption>
+								<span>R$ 4,19</span>
 							</figure>
 							<figure>
 								<img src="imagens/img17.png" class="produto" />
-								<figcaption>Chocolate Lindt Lindor Milk ou Swiss Classic 100 g R$ 10,90</figcaption>
+								<figcaption>Chocolate Lindt Lindor Milk ou Swiss Classic 100g</figcaption>
+								<span>R$ 10,90</span>
 							</figure>
 						</div>
 					</section>
@@ -316,39 +362,48 @@
 						<div>
 							<figure>
 								<img src="imagens/img18.png" class="produto" />
-								<figcaption>Refrigerante H2OH! sabores pet 1,5 L R$ 4,99</figcaption>
+								<figcaption>Refrigerante H2OH! sabores pet 1,5L</figcaption>
+								<span>R$ 4,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img19.png" class="produto" />
-								<figcaption>Cerveja Bohemia puro malte lata 350 ml R$ 2,49</figcaption>
+								<figcaption>Cerveja Bohemia puro malte lata 350ml</figcaption>
+								<span>R$ 2,49</span>
 							</figure>
 							<figure>
 								<img src="imagens/img20.png" class="produto" />
-								<figcaption>Vinho Espumante Casa Perini moscatel branco 750 ml R$ 46,99</figcaption>
+								<figcaption>Vinho Espumante Casa Perini moscatel branco 750ml</figcaption>
+								<span>R$ 46,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img21.png" class="produto" />
-								<figcaption>Vinho Espumante Salton moscatel branco 750 ml R$ 29,90</figcaption>
+								<figcaption>Vinho Espumante Salton moscatel branco 750ml</figcaption>
+								<span>R$ 29,90</span>
 							</figure>
 							<figure>
 								<img src="imagens/img22.png" class="produto" />
-								<figcaption>Vinho Salton Intenso merlot tinto 750 ml R$ 31,90</figcaption>
+								<figcaption>Vinho Salton Intenso merlot tinto 750ml</figcaption>
+								<span>R$ 31,90</span>
 							</figure>
 							<figure>
 								<img src="imagens/img23.png" class="produto" />
-								<figcaption>Vinho Frisante Mioranza suave rosé 750 ml R$ 19,90</figcaption>
+								<figcaption>Vinho Frisante Mioranza suave rosé 750ml</figcaption>
+								<span>R$ 19,90</span>
 							</figure>
 							<figure>
 								<img src="imagens/img24.png" class="produto" />
-								<figcaption>Vinho Frances Bois Mirail Rouge tinto 750 ml R$ 4,99</figcaption>
+								<figcaption>Vinho Frances Bois Mirail Rouge tinto 750ml</figcaption>
+								<span>R$ 4,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img25.png" class="produto" />
-								<figcaption>Vinho Chileno Tres Toros cabernet sauvignon tinto 750 ml R$ 29,90</figcaption>
+								<figcaption>Vinho Chileno Tres Toros cabernet sauvignon tinto 750ml</figcaption>
+								<span>R$ 29,90</span>
 							</figure>
 							<figure>
 								<img src="imagens/img26.png" class="produto" />
-								<figcaption>Vinho Português Terra Mãe tinto 750 ml R$ 30,90</figcaption>
+								<figcaption>Vinho Português Terra Mãe tinto 750ml</figcaption>
+								<span>R$ 30,90</span>
 							</figure>
 						</div>
 					</section>
@@ -360,23 +415,28 @@
 						<div>
 							<figure>
 								<img src="imagens/img27.png" class="produto" />
-								<figcaption>Kit enxaguante bucal Colgate Plax Total 12 500 ml + Plax 250 ml R$ 19,69</figcaption>
+								<figcaption>Kit enxaguante bucal Colgate Plax Total 12 500ml + Plax 250ml</figcaption>
+								<span>R$ 19,69</span>
 							</figure>
 							<figure>
 								<img src="imagens/img28.png" class="produto" />
-								<figcaption>Kit toalha umedecida Johnson’s c/ 48 unidades Leve 4 Pague 3 R$ 32,89</figcaption>
+								<figcaption>Kit toalha umedecida Johnson’s c/ 48 unidades Leve 4 Pague 3</figcaption>
+								<span>R$ 32,89</span>
 							</figure>
 							<figure>
 								<img src="imagens/img29.png" class="produto" />
-								<figcaption>Lava roupas concentrado Ariel fragrâncias 1,2 L R$ 17,90</figcaption>
+								<figcaption>Lava roupas concentrado Ariel fragrâncias 1,2L</figcaption>
+								<span>R$ 17,90</span>
 							</figure>
 							<figure>
 								<img src="imagens/img30.png" class="produto" />
-								<figcaption>Limpador Veja Gold multiuso original 500 ml com 10% de desconto R$ 2,99</figcaption>
+								<figcaption>Limpador Veja Gold multiuso original 500 ml com 10% de desconto</figcaption>
+								<span>R$ 2,99</span>
 							</figure>
 							<figure>
 								<img src="imagens/img31.png" class="produto" />
-								<figcaption>Papel higiênico Neve folha dupla ou tripla 20/30 metros com 4 unidades R$ 6,99</figcaption>
+								<figcaption>Papel higiênico Neve folha dupla ou tripla 20/30 metros com 4 unidades</figcaption>
+								<span>R$ 6,99</span>
 							</figure>
 						</div>
 					</section>
