Responsivo quase finalizado

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,39 @@
 		<script src="https://kit.fontawesome.com/efb2a1f0f0.js" crossorigin="anonymous"></script>
 		<!-- <link rel="stylesheet" href="style.css" /> -->
 		<link rel="stylesheet" href="style_teste.css" />
+		<link rel="shortcut icon" href="./imagens/logoA.png" type="image/x-icon" />
 		<title>Supermercado A</title>
 	</head>
 	<body>
 		<header>
+			<div class="w3-sidebar w3-bar-block w3-border-right" style="display: none" id="mySidebar">
+				<button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
+				<section id="menu-categorias">
+					<ul>
+						<li><a href="#carnes">Carnes 🍖 </a></li>
+						<hr />
+						<li><a href="#peixes">Peixes e derivados 🐟</a></li>
+						<hr />
+						<li><a href="#legumes">Verduras e Legumes 🍆</a></li>
+						<hr />
+						<li><a href="#frutas">Frutas 🍎</a></li>
+						<hr />
+						<li><a href="#margarinas">Margarinas 🧈</a></li>
+						<hr />
+						<li><a href="#graos">Grãos 🌾</a></li>
+						<hr />
+						<li><a href="#temperos">Temperos 🧄</a></li>
+						<hr />
+						<li><a href="#doces">Doces 🍬</a></li>
+						<hr />
+						<li><a href="#bebidas">Bebidas 🍹</a></li>
+						<hr />
+						<li><a href="#limpeza">Higiene e Limpeza 🧴</a></li>
+						<hr />
+					</ul>
+				</section>
+			</div>
+
 			<section id="inicio">
 				<figure>
 					<img src="imagens/logoA.png" />
@@ -33,25 +62,25 @@
 		<main>
 			<section id="menu-categorias">
 				<ul>
-					<li><a href="#carnes">Carnes</a></li>
+					<li><a href="#carnes">Carnes 🍖 </a></li>
 					<hr />
-					<li><a href="#peixes">Peixes e derivados</a></li>
+					<li><a href="#peixes">Peixes e derivados 🐟</a></li>
 					<hr />
-					<li><a href="#legumes">Verduras e Legumes</a></li>
+					<li><a href="#legumes">Verduras e Legumes 🍆</a></li>
 					<hr />
-					<li><a href="#frutas">Frutas</a></li>
+					<li><a href="#frutas">Frutas 🍎</a></li>
 					<hr />
-					<li><a href="#margarinas">Margarinas</a></li>
+					<li><a href="#margarinas">Margarinas 🧈</a></li>
 					<hr />
-					<li><a href="#graos">Grãos</a></li>
+					<li><a href="#graos">Grãos 🌾</a></li>
 					<hr />
-					<li><a href="#temperos">Temperos</a></li>
+					<li><a href="#temperos">Temperos 🧄</a></li>
 					<hr />
-					<li><a href="#doces">Doces</a></li>
+					<li><a href="#doces">Doces 🍬</a></li>
 					<hr />
-					<li><a href="#bebidas">Bebidas</a></li>
+					<li><a href="#bebidas">Bebidas 🍹</a></li>
 					<hr />
-					<li><a href="#limpeza">Higiene e Limpeza</a></li>
+					<li><a href="#limpeza">Higiene e Limpeza 🧴</a></li>
 					<hr />
 				</ul>
 			</section>
