Acabamento em algumas áreas
Menu categoria no responsivo também

--- a/src/index.html
+++ b/src/index.html
@@ -12,34 +12,6 @@
 	</head>
 	<body>
 		<header>
-			<div class="w3-sidebar w3-bar-block w3-border-right" style="display: none" id="mySidebar">
-				<button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
-				<section id="menu-categorias">
-					<ul>
-						<li><a href="#carnes">Carnes 🍖 </a></li>
-						<hr />
-						<li><a href="#peixes">Peixes e derivados 🐟</a></li>
-						<hr />
-						<li><a href="#legumes">Verduras e Legumes 🍆</a></li>
-						<hr />
-						<li><a href="#frutas">Frutas 🍎</a></li>
-						<hr />
-						<li><a href="#margarinas">Margarinas 🧈</a></li>
-						<hr />
-						<li><a href="#graos">Grãos 🌾</a></li>
-						<hr />
-						<li><a href="#temperos">Temperos 🧄</a></li>
-						<hr />
-						<li><a href="#doces">Doces 🍬</a></li>
-						<hr />
-						<li><a href="#bebidas">Bebidas 🍹</a></li>
-						<hr />
-						<li><a href="#limpeza">Higiene e Limpeza 🧴</a></li>
-						<hr />
-					</ul>
-				</section>
-			</div>
-
 			<section id="inicio">
 				<figure>
 					<img src="imagens/logoA.png" />
@@ -47,9 +19,34 @@
 				</figure>
 			</section>
 
+			<div id="menu-categorias-responsivo">
+				<ul>
+					<li><a href="#carnes">🍖</a></li>
+					<hr />
+					<li><a href="#peixes">🐟</a></li>
+					<hr />
+					<li><a href="#legumes">🍆</a></li>
+					<hr />
+					<li><a href="#frutas">🍎</a></li>
+					<hr />
+					<li><a href="#margarinas">🧈</a></li>
+					<hr />
+					<li><a href="#graos">🌾</a></li>
+					<hr />
+					<li><a href="#temperos">🧄</a></li>
+					<hr />
+					<li><a href="#doces">🍬</a></li>
+					<hr />
+					<li><a href="#bebidas">🍹</a></li>
+					<hr />
+					<li><a href="#limpeza">🧴</a></li>
+					<hr />
+				</ul>
+			</div>
+
 			<nav>
 				<div id="categorias">
-					<a href="#categorias">Categorias</a>
+					<a href="index.html">Home</a>
 				</div>
 				<div id="menu_contato">
 					<a href="#contato">Contato</a>
@@ -62,25 +59,46 @@
 		<main>
 			<section id="menu-categorias">
 				<ul>
-					<li><a href="#carnes">Carnes 🍖 </a></li>
+					<h2>Categorias</h2>
+					<li>
+						<a href="#carnes"> <span class="icon">🍖</span> <span class="text"> Carnes </span> </a>
+					</li>
 					<hr />
-					<li><a href="#peixes">Peixes e derivados 🐟</a></li>
+					<li>
+						<a href="#peixes"> <span class="icon">🐟</span> <span class="text"> Peixes e Derivados </span> </a>
+					</li>
 					<hr />
-					<li><a href="#legumes">Verduras e Legumes 🍆</a></li>
+					<li>
+						<a href="#legumes"> <span class="icon">🍆</span> <span class="text">Verduras e Legumes</span></a>
+					</li>
 					<hr />
-					<li><a href="#frutas">Frutas 🍎</a></li>
+					<li>
+						<a href="#frutas"><span class="icon">🍎</span> <span class="text">Frutas</span> </a>
+					</li>
 					<hr />
-					<li><a href="#margarinas">Margarinas 🧈</a></li>
+					<li>
+						<a href="#margarinas"><span class="icon">🧈</span><span class="text">Margarinas</span> </a>
+					</li>
 					<hr />
-					<li><a href="#graos">Grãos 🌾</a></li>
+					<li>
+						<a href="#graos"><span class="icon">🌾</span> <span class="text">Grãos</span> </a>
+					</li>
 					<hr />
-					<li><a href="#temperos">Temperos 🧄</a></li>
+					<li>
+						<a href="#temperos"><span class="icon">🧄</span> <span class="text">Temperos</span> </a>
+					</li>
 					<hr />
-					<li><a href="#doces">Doces 🍬</a></li>
+					<li>
+						<a href="#doces"><span class="icon">🍬</span><span class="text">Doces</span> </a>
+					</li>
 					<hr />
-					<li><a href="#bebidas">Bebidas 🍹</a></li>
+					<li>
+						<a href="#bebidas"><span class="icon">🍹</span> <span class="text">Bebidas</span> </a>
+					</li>
 					<hr />
-					<li><a href="#limpeza">Higiene e Limpeza 🧴</a></li>
+					<li>
+						<a href="#limpeza"> <span class="icon">🧴</span> <span class="text">Higiene e Limpeza</span></a>
+					</li>
 					<hr />
 				</ul>
 			</section>
@@ -499,7 +517,7 @@
 				</figure>
 
 				<nav>
-					<a href="#categorias">Categorias</a>
+					<a href="index.html">Inicio</a>
 
 					<a href="#contato">Contato</a>
 
